[package]
name = "jason"
version = "0.1.0"
authors = ["Felipe Rosa <felipe.sgrosa@gmail.com>"]
edition = "2018"
description = "JSON-RPC 2.0 client library"
documentation = "https://docs.rs/jason"
readme = "README.md"
repository = "https://github.com/FelipeRosa/jason-rs"
license = "MIT"
keywords = ["json-rpc", "tokio"]

[features]
http = ["transport", "hyper"]
ipc = ["transport"]
ws = ["transport", "tokio-tungstenite"]
transport = ["tokio", "async-stream"]

[dependencies]
anyhow = "1.0.37"
futures = { version = "0.3.8", default-features = false, features = ["std"] }
log = "0.4.11"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"

async-stream = { version = "0.3.0", optional = true }
hyper = { version = "0.14.2", default-features = false, features = ["tcp", "http1", "client"], optional = true }
tokio = { version = "1.0.1", default-features = false, features = ["rt", "sync", "net", "macros", "io-util"], optional = true }
tokio-tungstenite = { git = "https://github.com/FelipeRosa/tokio-tungstenite", branch = "update-dependencies", default-features = false, features = ["connect"], optional = true }

[dev-dependencies]
hyper = { version = "0.14.2", default-features = false, features = ["tcp", "http1", "client", "server"] }
lazy_static = "1.4.0"
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }