[package]
name = "jason"
version = "0.2.0"
authors = ["Felipe Rosa <felipe.sgrosa@gmail.com>"]
edition = "2018"
description = "JSON-RPC 2.0 client library"
documentation = "https://docs.rs/jason"
readme = "README.md"
repository = "https://github.com/FelipeRosa/jason-rs"
license = "MIT"
keywords = ["json-rpc", "tokio"]

[features]
http = ["transport", "hyper"]
http-tls = ["http", "hyper-tls"]
ipc = ["transport"]
ws = ["transport", "tokio-tungstenite"]
transport = ["tokio", "async-stream"]

[dependencies]
anyhow = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

async-stream = { version = "0.3", optional = true }
hyper = { version = "0.14", default-features = false, features = ["tcp", "http1", "client"], optional = true }
hyper-tls = { version = "0.5", optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "net", "macros", "io-util"], optional = true }
tokio-tungstenite = { version = "0.15", default-features = false, features = ["connect"], optional = true }

[dev-dependencies]
hyper = { version = "0.14", default-features = false, features = ["tcp", "http1", "client", "server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "requests"
required-features = ["http-tls"]